--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.5.3
   image_picker: ^1.2.0
   cloudinary_public: ^0.23.1
+  flutter_stripe: ^12.0.2
 
 dev_dependencies:
   flutter_test:
