--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.2.0
   cloudinary_public: ^0.23.1
   flutter_stripe: ^12.0.2
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
