--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,9 @@ dependencies:
   mailer: ^6.0.0
   google_generative_ai: ^0.4.0
   flutter_markdown: ^0.6.14
-  fl_chart: ^0.66.0  # Thư viện vẽ biểu đồ
+  fl_chart: ^0.66.0
+  provider: ^6.0.0
+
 
 
 dev_dependencies:
